package com.matzua.engine.app.interfaces;

public interface ISystemRenderer extends ProcessingAPI {
    void draw();
}
