package com.matzua.jpg.core.app.draw;

public interface IRenderer {
    void render();
}
